@@ -52,6 +52,7 @@ I want to thank the help and the collaboration of the following people:
 -Miodrag Milanovic, for granting permission to include his National Semiconductor SC/MP CPU Emulator https://github.com/mamedev/mame/blob/master/src/devices/cpu/scmp/ . Distributed under BSD-3 license
 -Tim Gilberts, for bug reporting
 -Gary Lancaster, for bug reporting
+-Mark Hutchings, for bug reporting, proposing new features and code contribution
 
 -Everyone at Speccy, ZX80, ZX81, Z88 and Raspberry Pi forums with all the suggestions to my emulator
 -Everyone who test the beta and stable versions of the emulator and report bugs
